Add delete fft message endpoint
