# routes/foodForThought.js
@@ -9,4 +9,11 @@ module.exports = (router) => {
     router.get('/food-for-thought', auth.required, (req, res, next) => {
         fftcontroller.get(req, res, next);
     });
+
+    /**
+     * Delete food for thought message
+     */
+    router.delete('/food-for-thought/:id', auth.required, auth.admin, (req, res, next) => {
+        fftcontroller.deleteMessage(req, res, next);
+    });
 };
